Positioned physics bodies correctly in relation to sprite(physics body origin seems to be bottom-right while xna sprites are top-left). Added physics debug mode, which draws the AABB on screen. Can be disabled with a bool in PhysicsSystem

--- a/DirtyGame/DirtyGame.csproj
+++ b/DirtyGame/DirtyGame.csproj
@@ -97,6 +97,7 @@
     <Compile Include="game\SGraphics\Camera.cs" />
     <Compile Include="game\SGraphics\Commands\BeginBatchDraw.cs" />
     <Compile Include="game\SGraphics\Commands\DrawCall.cs" />
+    <Compile Include="game\SGraphics\Commands\DrawCalls\BatchDrawLine.cs" />
     <Compile Include="game\SGraphics\Commands\DrawCalls\BatchDrawSprite.cs" />
     <Compile Include="game\SGraphics\Commands\DrawCalls\BatchDrawText.cs" />
     <Compile Include="game\SGraphics\RenderCommand.cs" />
