Entity System Changes: Components have Names and are now mapped by name. Multiple components of the same type can be added, provided they have different names. Components are given a default name(their class name) for ease of use.
Added PropertyComponents. Use to store arbitrary properties in entities. Has an IsModified flag, to check if the property was modified in the last frame. Use this property to easily update things(gui, etc) when a property changes.

Game now tracks score, money, and kill count.

--- a/DirtyGame/DirtyGame.csproj
+++ b/DirtyGame/DirtyGame.csproj
@@ -42,6 +42,7 @@
     <Compile Include="game\Core\Components\BorderComponent.cs" />
     <Compile Include="game\Core\Components\NameComponent.cs" />
     <Compile Include="game\Core\Components\MeleeComponent.cs" />
+    <Compile Include="game\Core\Components\PropertyComponent.cs" />
     <Compile Include="game\Core\Components\SpellComponent.cs" />
     <Compile Include="game\Core\Components\HealthComponent.cs" />
     <Compile Include="game\Core\Components\InventoryComponent.cs" />
@@ -50,6 +51,7 @@
     <Compile Include="game\Core\Components\Unit\UnitComponent.cs" />
     <Compile Include="game\Core\Systems\Monster\SeparationSystem.cs" />
     <Compile Include="game\Core\Systems\ProjectileSystem.cs" />
+    <Compile Include="game\Core\Systems\PropertySystem.cs" />
     <Compile Include="game\Core\Systems\WeaponSystem.cs" />
     <Compile Include="game\Input\InputContext.cs" />
     <Compile Include="game\Input\KeyHandler.cs" />
