The Player stops moving when attacking with the sword. Problem Player does not continure to move after sword is done. Problem Player does not switch to idle animation when attacking.

--- a/DirtyGame/DirtyGame.csproj
+++ b/DirtyGame/DirtyGame.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="game\Core\Components\AOEComponent.cs" />
     <Compile Include="game\Core\Components\BorderComponent.cs" />
+    <Compile Include="game\Core\Components\AttackingComponent.cs" />
     <Compile Include="game\Core\Components\NameComponent.cs" />
     <Compile Include="game\Core\Components\MeleeComponent.cs" />
     <Compile Include="game\Core\Components\PropertyComponent.cs" />
