--- a/DirtyGame/DirtyGame.csproj
+++ b/DirtyGame/DirtyGame.csproj
@@ -58,6 +58,7 @@
     <Compile Include="game\Core\Components\ProjectileComponent.cs" />
     <Compile Include="game\Core\Components\StatsComponent.cs" />
     <Compile Include="game\Core\Components\Unit\UnitComponent.cs" />
+    <Compile Include="game\Core\Events\DetonateEvent.cs" />
     <Compile Include="game\Core\GameStates\BuyState.cs" />
     <Compile Include="game\Core\Systems\AOESystem.cs" />
     <Compile Include="game\Core\Systems\Monster\SeparationSystem.cs" />
