Grenade Launcher now launches a special projectile that (when it reaches it's max range) stops moving, starts a timer (for now just decrements by consant value every loop), then explodes when the timer expires. Still does no damage however, and collisions don't cause it to stop...

--- a/DirtyGame/DirtyGame.csproj
+++ b/DirtyGame/DirtyGame.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="game\Core\Components\AOEComponent.cs" />
     <Compile Include="game\Core\Components\BorderComponent.cs" />
+    <Compile Include="game\Core\Components\GrenadeComponent.cs" />
     <Compile Include="game\Core\Components\NameComponent.cs" />
     <Compile Include="game\Core\Components\MeleeComponent.cs" />
     <Compile Include="game\Core\Components\PropertyComponent.cs" />
@@ -61,6 +62,7 @@
     <Compile Include="game\Core\Events\DetonateEvent.cs" />
     <Compile Include="game\Core\GameStates\BuyState.cs" />
     <Compile Include="game\Core\Systems\AOESystem.cs" />
+    <Compile Include="game\Core\Systems\GrenadeSystem.cs" />
     <Compile Include="game\Core\Systems\Monster\SeparationSystem.cs" />
     <Compile Include="game\Core\Systems\ProjectileSystem.cs" />
     <Compile Include="game\Core\Systems\PropertySystem.cs" />
