--- a/DirtyGame/DirtyGame.csproj
+++ b/DirtyGame/DirtyGame.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="game\Core\Components\AOEComponent.cs" />
     <Compile Include="game\Core\Components\BorderComponent.cs" />
+    <Compile Include="game\Core\Components\LaserComponent.cs" />
     <Compile Include="game\Core\Components\NameComponent.cs" />
     <Compile Include="game\Core\Components\MeleeComponent.cs" />
     <Compile Include="game\Core\Components\PropertyComponent.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="game\Core\Components\Movement\SeparationComponent.cs" />
     <Compile Include="game\Core\Components\ProjectileComponent.cs" />
     <Compile Include="game\Core\Components\StatsComponent.cs" />
+    <Compile Include="game\Core\Components\Unit\SnipComponent.cs" />
     <Compile Include="game\Core\Components\Unit\UnitComponent.cs" />
     <Compile Include="game\Core\GameStates\BuyState.cs" />
     <Compile Include="game\Core\Systems\AOESystem.cs" />
@@ -307,6 +309,9 @@
     <Content Include="Content\PlayerAnimation.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
+    </Content>
+    <Content Include="Content\snipMonster.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\SuicideBomber.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
