tried to do tile based collision. Got it sorta working for the player (currently disabled). Cave map collision is a bit wonky, and I don't know why.

--- a/CleanGame/CleanGame.csproj
+++ b/CleanGame/CleanGame.csproj
@@ -313,12 +313,15 @@
   <ItemGroup>
     <None Include="Content\Arena.tmx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </None>
     <None Include="Content\Cave.tmx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </None>
     <None Include="Content\Forest.tmx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </None>
     <None Include="Content\Monster.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
