Swords move with their Owner Physics of Player Sword... Kool

--- a/CleanGame/CleanGame.csproj
+++ b/CleanGame/CleanGame.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Game\Core\Systems\AOESystem.cs" />
     <Compile Include="Game\Core\Systems\GameLogicSystem.cs" />
     <Compile Include="Game\Core\Systems\GrenadeSystem.cs" />
+    <Compile Include="Game\Core\Systems\MeleeSystem.cs" />
     <Compile Include="Game\Core\Systems\Monster\AISystem.cs" />
     <Compile Include="Game\Core\Systems\Monster\SeparationSystem.cs" />
     <Compile Include="Game\Core\Systems\Movement\MovementSystem.cs" />
