--- a/TowerSite/TowerSite/TowerSite.csproj
+++ b/TowerSite/TowerSite/TowerSite.csproj
@@ -189,10 +189,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\GameEventModel.cs" />
+    <Compile Include="Models\GameSession.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\TowerSiteContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
