--- a/TowerSite/TowerSite/TowerSite.csproj
+++ b/TowerSite/TowerSite/TowerSite.csproj
@@ -185,6 +185,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\GameEventController.cs" />
+    <Compile Include="Controllers\GameSessionController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
