--- a/CleanGame/CleanGame.csproj
+++ b/CleanGame/CleanGame.csproj
@@ -101,6 +101,7 @@
     <Reference Include="System.Data.SQLite.Linq">
       <HintPath>..\SQLite\System.Data.SQLite.Linq.dll</HintPath>
     </Reference>
+    <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
