--- a/TowerSite/TowerSite/TowerSite.csproj
+++ b/TowerSite/TowerSite/TowerSite.csproj
@@ -208,6 +208,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Properties\PublishProfiles\csci4950.pubxml" />
     <None Include="Properties\PublishProfiles\TowerOffense.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
