#295 Leaderboard is live on site

--- a/TowerSite/TowerSite/Web.config
+++ b/TowerSite/TowerSite/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,9 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-TowerSite-20140302090625.mdf;Initial Catalog=aspnet-TowerSite-20140302090625;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-TowerSite-20140302090625.mdf;Initial Catalog=aspnet-TowerSite-20140302090625;Integrated Security=True" providerName="System.Data.SqlClient" /><add name="Leaderboard" connectionString="metadata=res://*/Models.LeaderboardModel.csdl|res://*/Models.LeaderboardModel.ssdl|res://*/Models.LeaderboardModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=g8a9h5zlj0.database.windows.net;initial catalog=toweroffense;persist security info=True;user id=csci4950;password=fsei8235@#$;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="Entities" connectionString="metadata=res://*/Models.LeaderboardModel.csdl|res://*/Models.LeaderboardModel.ssdl|res://*/Models.LeaderboardModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=g8a9h5zlj0.database.windows.net;initial catalog=toweroffense;persist security info=True;user id=csci4950;password=fsei8235@#$;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
