--- a/TowerSite/TowerSite/TowerSite.csproj
+++ b/TowerSite/TowerSite/TowerSite.csproj
@@ -252,7 +252,9 @@
       <DependentUpon>LeaderboardModel.edmx</DependentUpon>
       <LastGenOutput>LeaderboardModel.cs</LastGenOutput>
     </Content>
+    <None Include="Properties\PublishProfiles\csci4950 - FTP %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\csci4950 - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\csci4950 - Web Deploy %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\csci4950 - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\csci4950.pubxml" />
     <None Include="Properties\PublishProfiles\TowerOffense.pubxml" />
