--- a/TowerSite/TowerSite/Web.config
+++ b/TowerSite/TowerSite/Web.config
@@ -22,6 +22,11 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <pages>
+      <controls>
+        <add assembly="PagedList.Mvc" namespace="PagedList.Mvc" tagPrefix="plmvc"/>
+      </controls>
+    </pages>
   </system.web>
   <system.webServer>
     <modules>
